# yaque

./: .gitignore  LICENSE  README.md  backup_rules.xml  bench_generation.py  bench_solver.py  buildozer.spec  intent_filters.xml  profile_generation.py  pyproject.toml  requirements.txt  ruff.toml  setup_solver.py  splash screen prompt.txt  test_correctness.py  test_kingdoms_match.py
.claude/skills/test-conventions/: SKILL.md
.github/workflows/: build-android.yml  tests.yml
docs/: google-play-release.md  privacy.md  ui_styling.md
p4a-recipes/yaque_solver/: __init__.py
solver_pkg/: pyproject.toml  setup.py
solver_pkg/yaque_solver/: __init__.py
src/: __main__.py  analyze_queens.py  app.py  base_screens.py  board_widget.py  calendar_logic.py  database.py  encoding.py  game.py  game_encoding.py  main.py  popups.py  solver.pyx  ui_constants.py  widgets.py
src/assets/: ATTRIBUTION.md
src/screens/: __init__.py  base.py  calendar.py  game.py  game_board.py  logbook.py  menu.py  splash.py
src/widgets/: __init__.py  bar_chart.py  board.py  buttons.py  core.py  labels.py  layouts.py  spinner.py
tests/: test_calendar_logic.py  test_database.py  test_game.py  test_game_encoding.py  test_streak.py
